# Slots

./: .clang-format  CMakeLists.txt  README.md  vcpkg.json
include/: bindings.h  elements.h  graphics.h  interface.h  lists.h  states.h  utility.h
source/: elements.cxx  graphics.cxx  interface.cxx  main.cxx  states.cxx  utility.cxx
